Added cat images and several more test elements

--- a/test.html
+++ b/test.html
@@ -1,13 +1,42 @@
-<h> Does just 'h' provide for a larger text?</h>
-<h1> No, it's h1 for the win.</h1>
-<h1>Hey. I'm a big heading, call me h1.</h1>
-<h1>Hey. I'm the 3rd heading written. but my attribute name is also h1.</h1>
-<h2>Hey, I'm Heading size h2.</h2>
-<h3> h3 </h3>
-<h17> h17 </h17>
-<p>Hey/ I'm a paragraph element. Cool, huh?</p>
-<p1> Hey, I'm a separate Paragraph element called p1.</p1>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
+<!DOCTYPE html>
 
-<p><a href="https://youtube.com" target="_blank" title= "This link opens a new youtube tab">YouTube Link!</a></p>
-<h2><a href="https://youtube.com" target="_blank" title= "This link opens a new youtube tab">YouTube Link!</a></h2>
+	<html>
+		<head>      <!---Contains invisible elements of page -->
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<title></title>
+		</head>
+		<body>
+
+			<h> Does just 'h' provide for a larger text?</h>
+			<h1> No, it's h1 for the win.</h1>
+			<h1>Hey. I'm a big heading, call me h1.</h1>
+			<h1>Hey. I'm the 3rd heading written. but my attribute name is also h1.</h1>
+			<h2>Hey, I'm Heading size h2.</h2>
+			<h3> h3 </h3>
+			<h17> h17 </h17>
+			<p>Hey/ I'm a paragraph element. Cool, huh?</p>
+			<p1> Hey, I'm a separate Paragraph element called p1.</p1>
+			<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
+
+			<p><a href="https://youtube.com" target="_blank" title= "This link opens a new youtube tab">YouTube Link!</a></p>
+			<h2><a href="https://youtube.com" target="_blank" title= "This link opens a new youtube tab">YouTube Link!</a></h2>
+
+			<p>Hey. I'm a <b>bold</b> paragraph element. cool huh?</p>
+			<p>Hey. I'm an <i>italicized</i> paragraph element. cool huh?</p>
+			<h1> Saved Image from saved file (Relative URL)</h1>
+			            <!---Relative URL Cat image-->
+			<img src="Cartoon-Hero-Img/Cat2.jpeg">
+			<h1> Linked Image from website (Absolute URL)</h1>
+			            <!---Absolute URL Cat image-->
+			<img src="https://news.artnet.com/app/news-upload/2019/01/Cat-Photog-Feat-256x256.jpg">
+
+            <!---Line Break -->
+			<p>My Name is:<br>Kitty Cat</p> 
+
+			            <!---Relative URL Cat image-->
+			<img src="Cartoon-Hero-Img/Cat2.jpeg">
+
+
+		</body>
+	</html>
