added character's index.html file and some images
wrote the html and added a fav icon.

--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
 			<p>Hey. I'm an <i>italicized</i> paragraph element. cool huh?</p>
 			<h1> Saved Image from saved file (Relative URL)</h1>
 			            <!---Relative URL Cat image-->
-			<img src="Cartoon-Hero-Img/Cat2.jpeg">
+			<img src="img/Cat2.jpeg">
 			<h1> Linked Image from website (Absolute URL)</h1>
 			            <!---Absolute URL Cat image-->
 			<img src="https://news.artnet.com/app/news-upload/2019/01/Cat-Photog-Feat-256x256.jpg">
@@ -35,7 +35,7 @@
 			<p>My Name is:<br>Mr. Big Fat Kitty Cat</p> 
 
 			            <!---Relative URL Cat image-->
-			<img src="Cartoon-Hero-Img/Cat2.jpeg">
+			<img src="img/Cat2.jpeg">
 
 
 		</body>
