--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Avatar: The Last Airbender</title>
+
 	<link rel="icon" href="img/aang.jpeg">
+
+		<link href="https://fonts.googleapis.com/css2?family=Comforter&display=swap" rel="stylesheet">
+
+			<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 
@@ -19,15 +24,17 @@
 
 		<!--main element -->
 		<main>
-			<h2>About The Story:</h2>
+			<h2>Story Summary:</h2>
 			<p>
 				Avatar is ultimately a story about the experience of reincarnation, and the journey of a boy named aang who inherits a battle to save the world.
 			</p>
 			<img src="img/teamavatar.jpeg">
-			<p style="font-size: 30px; color: blue;"> 
 
-				<b>^ Team Avatar ^</b>
-			</p>
+				<p style="font-size: 30px; font-family: 'Comforter', cursive; color: blue;"> 
+				<b><u>   Team Avatar   
+
+				</u> </b> </p>
+
 			<h2>Aang's Characteristics</h2>
 			<ol>
 				
@@ -39,7 +46,7 @@
 			</ol>
 				<!--Friends -->
 			<h2>About Team Avatar</h2>
-			<p>Team Avatar, in order of tenure, are; Katara, Sokka, Toph, and Zuko. Click on the links below to read more about them.
+			<p>Team Avatar, in order of tenure: Katara, Sokka, Toph, and Zuko. Click on the links below to read more about them:
 			</p>
 			<ul>
 
@@ -61,7 +68,9 @@
 
 		<footer>
 
-				<p>This site was created during a <a href="https://taptapkaboom.com"></a>skillshare class, orginally created for Tap Tap Kaboom. &copy; Isaac Hale </p>
+				<p> <b> 
+					This site was created during a <a href="https://taptapkaboom.com"></a>skillshare class orginally created for Tap Tap Kaboom. &copy; Isaac Hale 
+				</b> </p>
 
 		</footer>
 
