--- a/Style-Test.html
+++ b/Style-Test.html
@@ -29,7 +29,7 @@ the below style attribute is called a rulset, and allows blanket functions to be
 
 
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -42,7 +42,7 @@ the below style attribute is called a rulset, and allows blanket functions to be
 </head>
 <body>
 			<!---1-->
-			
+
     <span>Span element</span>
 	<h1 class="Uppercase">
 		<span>Heading 1</span> - 1
